--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,104 @@
+:root {
+    width: 100%;
+    line-height: 1;
+    font-weight: 400;
 
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+}
+
+body {
+    /* min-width: 320px; */
+    font-family: "Noto Sans";
+}
+
+html,body{
+    width: 100%;
+    height: 100%;
+    font-size: 100%;
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    border: 0;
+}
+
+*,*:before,*:after{
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Oswald";
+    font-size : inherit;
+    font-weight: 400;
+}
+
+#root {
+    height: 100%;
+
+    --white-white : #FFF;
+    --light-blue-gray : #EEF1FF;
+    --dark-purple : #6566AC;
+    --blue: #AAC4FF;
+    --dark-blue: #84A9FC;
+    --light-blue: #D2DAFF;
+    --blue-transparent: rgba(177, 178, 255, 0.30);
+    --white: #FEFEFE;
+    --orange-sale : #FF5E00;
+    --black: #2B2B2B;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.no-scroll{
+    overflow: hidden;
+}
+
+.wrapper{
+    padding-top: 50px;
+    padding-bottom: 80px;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+}
+
+@media screen and (min-width: 1280px){
+    .container {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+}
