--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,4 +1,8 @@
 .footer{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: #FFDB58;
   padding: 30px 0;
   height: 80px;
