--- a/client/src/pages/RestaurantPage/RestaurantPage.scss
+++ b/client/src/pages/RestaurantPage/RestaurantPage.scss
@@ -1,18 +1,15 @@
 .restaurant {
   padding: 50px 0;
 
-
   &_container {
     display: grid;
-    grid-template-areas: "categories menu cart" ;
-    grid-template-columns: 1fr 1fr 320px;
+    grid-template-areas: "details details cart" "categories menu cart";
+    grid-template-columns: 150px 1fr 320px;
     gap: 30px;
   }
 
   &_card{
-    grid-column-start: categories;
-    grid-row-start: categories;
-    grid-column-end: menu;
+    grid-area: details;
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -50,21 +47,6 @@
       }
     }
   }
-
-  &_cart{
-    grid-area: cart;
-    min-height: 400px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
-    border-radius: 10px;
-    padding: 20px;
-  }
 }
 
-.cart{
-  &_title{
-    font-size: 24px;
-    color: #006A4E;
-    font-weight: bold;
-  }
 
-}
