developed menu body

--- a/client/src/pages/RestaurantPage/Cart/Cart.scss
+++ b/client/src/pages/RestaurantPage/Cart/Cart.scss
@@ -1,6 +1,6 @@
 .cart{
   grid-area: cart;
-  min-height: 400px;
+  height: 400px;
   box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
   border-radius: 10px;
   padding: 20px;
