--- a/client/src/pages/RestaurantPage/Categories/Categories.scss
+++ b/client/src/pages/RestaurantPage/Categories/Categories.scss
@@ -15,11 +15,14 @@
 
   &_list_item{
     padding: 15px;
-    border-bottom: 1px solid #808B96;
     font-size: 18px;
     cursor: pointer;
 
-    &:hover{
+    &:not(:last-child){
+      border-bottom: 1px solid #E4E4E4FF;
+    }
+
+    &:hover {
       font-weight: bold;
     }
   }
