--- a/client/src/pages/RestaurantPage/Cart/Cart.scss
+++ b/client/src/pages/RestaurantPage/Cart/Cart.scss
@@ -1,14 +1,99 @@
 .cart{
-  grid-area: cart;
-  height: 400px;
+  display: flex;
+  flex-direction: column;
+  min-height: 400px;
   box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
   border-radius: 10px;
   padding: 20px;
+  gap: 25px;
+
+  &_wrapper{
+    grid-area: cart;
+    display: block;
+  }
 
   &_title{
     font-size: 24px;
     color: #006A4E;
     font-weight: bold;
+  }
+
+  &_body{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    flex: 1;
+    overflow: auto;
+  }
+
+  &_empty{
+    font-size: 20px;
+    margin-top: 70px;
+    text-align: center;
+    color: #808B96;
+    font-weight: 500;
+  }
+
+  &_item{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 5px;
+    padding-bottom: 5px;
+
+    &:not(:last-child){
+      border-bottom: 1px solid #e4e4e4;
+    }
+
+    &_top{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 16px;
+    }
+
+    &_quantity{
+      font-weight: bold;
+    }
+
+    &_bottom{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &_btn{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 25px;
+      width: 25px;
+      color: #006A4E;
+      background-color: rgba(175, 216, 200, 0.7);
+      font-weight: bold;
+      font-size: 20px;
+      border-radius: 50%;
+      margin: 5px;
+      cursor: pointer;
+    }
+  }
+
+  &_sum{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding-top: 10px;
+
+    &_text{
+      font-size: 18px;
+      font-weight: 600;
+    }
+
+    &_total{
+      font-size: 20px;
+      font-weight: 700;
+    }
   }
 
 }
