--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,6 +1,12 @@
 .header{
   background-color: #FFDB58;
   min-height: 80px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  z-index: 20;
 
   &_container{
     display: flex;
@@ -8,6 +14,8 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    width: 100%;
+    align-self: center;
   }
 
   &_logo{
