--- a/client/src/pages/RestaurantPage/Cart/Cart.scss
+++ b/client/src/pages/RestaurantPage/Cart/Cart.scss
@@ -6,10 +6,13 @@
   border-radius: 10px;
   padding: 20px;
   gap: 25px;
+  position: sticky;
+  top: 110px;
 
   &_wrapper{
     grid-area: cart;
     display: block;
+    position: relative;
   }
 
   &_title{
@@ -75,6 +78,7 @@
       border-radius: 50%;
       margin: 5px;
       cursor: pointer;
+      user-select: none;
     }
   }
 
