--- a/client/src/pages/RestaurantPage/Categories/Categories.scss
+++ b/client/src/pages/RestaurantPage/Categories/Categories.scss
@@ -1,6 +1,12 @@
 .category{
-  grid-area: categories;
-  height: 100px;
+  width: 100%;
+  position: sticky;
+  top: 110px;
+
+  &_wrapper{
+    grid-area: categories;
+    position: relative;
+  }
 
   p{
     font-size: 20px;
