--- a/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
+++ b/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
@@ -66,6 +66,7 @@
     border-radius: 50%;
     margin: 5px;
     cursor: pointer;
+    user-select: none;
 
     &:hover:before{
       content: 'Add to cart';
