--- a/client/src/pages/RestaurantPage/Cart/Cart.scss
+++ b/client/src/pages/RestaurantPage/Cart/Cart.scss
@@ -17,8 +17,11 @@
 
   &_title{
     font-size: 24px;
-    color: #006A4E;
     font-weight: bold;
+
+    span{
+      color: #006A4E;
+    }
   }
 
   &_body{
@@ -100,4 +103,19 @@
     }
   }
 
+  &_button{
+    width: 100%;
+    height: 40px;
+    border-radius: 15px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    background-color: #31906E;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+
+    &:hover{
+      background-color: darken(#31906E, 10%);
+    }
+  }
 }
