--- a/client/src/components/LocationPopUp/LocationPopUp.scss
+++ b/client/src/components/LocationPopUp/LocationPopUp.scss
@@ -4,6 +4,7 @@
   background-color: white;
   margin: 0 auto;
   padding: 20px;
+  border-radius: 10px;
 
   &_background{
     width: 100vw;
@@ -17,13 +18,107 @@
     align-items: center;
   }
 
+  &_container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  &_header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &_title{
+    font-size: 25px;
+    color: #006A4E;
+    font-weight: bold;
+  }
+
+  &_cross{
+    width: 20px;
+    height: 20px;
+    margin: 4px;
+    position: relative;
+    cursor: pointer;
+
+    &::before, &::after{
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 20px;
+      height: 1px;
+      background-color: black;
+    }
+
+    &::before{
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+
+    &::after{
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+  }
+
   &_main{
     display: flex;
-    gap: 20px;
+    gap: 40px;
   }
 
   &_location{
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    &_current{
+      display: flex;
+      gap: 2px;
+      align-items: center;
+      cursor: pointer;
+      margin-top: 5px;
+
+      svg{
+        transform: scale(0.8);
+      }
+
+      p{
+        font-size: 16px;
+      }
+
+      &:hover{
+        p{
+          color: #006A4E;
+        }
+      }
+    }
+
+    form{
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-top: 40px;
+
+      label{
+        font-weight: bold;
+      }
+
+      button{
+        height: 40px;
+        border-radius: 5px;
+        font-size: 16px;
+        color: white;
+        background-color: #31906E;
+        font-weight: 600;
+        transition: all 0.3s ease-in-out;
+
+        &:hover{
+          background-color: darken(#31906E, 10%);
+        }
+      }
+    }
   }
 
   &_input{
@@ -60,5 +155,12 @@
         background-color: rgba(175, 216, 200, 0.5);
       }
     }
+  }
+
+  &_map{
+    display: block;
+    height: 100%;
+    width: 50%;
+    border: 1px solid #808B96;
   }
 }
