--- a/client/src/components/LocationPopUp/LocationPopUp.scss
+++ b/client/src/components/LocationPopUp/LocationPopUp.scss
@@ -71,7 +71,8 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 25px;
+    position: relative;
 
     &_current{
       display: flex;
@@ -99,7 +100,7 @@
       display: flex;
       flex-direction: column;
       gap: 15px;
-      margin-top: 40px;
+      margin-top: 30px;
 
       label{
         font-weight: bold;
@@ -157,6 +158,13 @@
     }
   }
 
+  &_confirmBtn{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
+
   &_map{
     display: flex;
     flex-direction: column;
@@ -175,6 +183,15 @@
 
     #map{
       border: 1px solid #808B96;
+    }
+  }
+
+  .nonactive{
+    background: gray;
+
+    &:hover{
+      background: gray;
+      cursor: default;
     }
   }
 }
