--- a/client/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/client/src/pages/CheckoutPage/CheckoutPage.scss
@@ -14,6 +14,13 @@
   }
 
   &_personal_info {
+    padding-top: 30px;
+
+    &_title{
+      font-size: 30px;
+      font-weight: 600;
+      padding-bottom: 20px;
+    }
   }
 
   &_order {
