--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -10,8 +10,18 @@
     justify-content: center;
     align-items: center;
 
-    svg {
-      transform: scale(1.5);
+    span {
+      color: white;
+      background: #006A4E;
+      font-weight: bold;
+      font-size: 16px;
+      padding: 10px;
+      border-radius: 15px;
+      letter-spacing: 1px;
+
+      &:hover{
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      }
     }
   }
 
