--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,7 +2,6 @@
     width: 100%;
     line-height: 1;
     font-weight: 400;
-
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -85,6 +84,44 @@ h1, h2, h3, h4, h5, h6 {
 .content_wrap{
     flex: 1;
     padding-top: 80px;
+}
+
+.popUp-background{
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+}
+
+.cross{
+    width: 20px;
+    height: 20px;
+    margin: 4px;
+    position: relative;
+    cursor: pointer;
+
+    &::before, &::after{
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 20px;
+        height: 1px;
+        background-color: black;
+    }
+
+    &::before{
+        transform: translate(-50%, -50%) rotate(45deg);
+    }
+
+    &::after{
+        transform: translate(-50%, -50%) rotate(-45deg);
+    }
 }
 
 @media screen and (min-width: 768px) {
