added session storage, using sessions on front

--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -4,6 +4,11 @@
   justify-content: center;
   gap: 30px;
 
+  &_greeting{
+    font-size: 20px;
+    font-weight: 600;
+  }
+
   &_account {
     cursor: pointer;
     display: flex;
