--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,6 +1,8 @@
+@import '../../styles/variables.scss';
+
 .footer{
   width: 100%;
-  background-color: #FFDB58;
+  background-color: $yellow;
   padding: 30px 0;
   height: 80px;
 }
