--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,5 +1,7 @@
+@import '../../styles/variables.scss';
+
 .header{
-  background-color: #FFDB58;
+  background-color: $yellow;
   min-height: 80px;
   width: 100%;
   position: fixed;
@@ -19,7 +21,7 @@
   }
 
   &_logo{
-    color: #31906E;
+    color: $dark-brown;
     font-size: 35px;
     font-weight: bold;
   }
@@ -37,7 +39,7 @@
     p{
       font-size: 18px;
       font-weight: 500;
-      color: #808B96;
+      color: $dark-green;
     }
 
   }
