--- a/client/src/components/LocationPopUp/LocationPopUp.scss
+++ b/client/src/components/LocationPopUp/LocationPopUp.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .locationPopUp{
   width: 1000px;
   height: 520px;
@@ -20,7 +22,7 @@
 
   &_title{
     font-size: 25px;
-    color: #006A4E;
+    color: $dark-green;
     font-weight: bold;
   }
 
@@ -53,7 +55,7 @@
 
       &:hover{
         p{
-          color: #006A4E;
+          color: $light-green;
         }
       }
     }
@@ -73,7 +75,7 @@
   &_input{
     width: 100%;
     height: 40px;
-    border: 1px solid #808B96;
+    border: 1px solid $gray;
     border-radius: 5px;
     padding: 5px;
     font-size: 16px;
@@ -83,7 +85,7 @@
     width: 100%;
     height: 100px;
     overflow: auto;
-    border: 1px solid #808B96;
+    border: 1px solid $gray;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -97,7 +99,7 @@
       justify-content: space-between;
 
       span:last-child{
-        color: #808B96;
+        color: $gray;
       }
 
       &:hover{
@@ -111,12 +113,12 @@
     border-radius: 5px;
     font-size: 16px;
     color: white;
-    background-color: #31906E;
+    background-color: $light-green;
     font-weight: 600;
     transition: all 0.3s ease-in-out;
 
     &:hover{
-      background-color: darken(#31906E, 10%);
+      background-color: darken($light-green, 10%);
     }
   }
 
@@ -144,15 +146,15 @@
     }
 
     #map{
-      border: 1px solid #808B96;
+      border: 1px solid $gray;
     }
   }
 
   .nonactive{
-    background: gray;
+    background: $gray;
 
     &:hover{
-      background: gray;
+      background: $gray;
       cursor: default;
     }
   }
