--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,5 @@
+@import './styles/variables.scss';
+
 :root {
     width: 100%;
     line-height: 1;
@@ -10,15 +12,12 @@
 }
 
 body {
-    /* min-width: 320px; */
     font-family: "Noto Sans";
-
 }
 
 html,body{
     width: 100%;
     height: 100%;
-    font-size: 100%;
     font-size: 14px;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
