--- a/client/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/client/src/pages/CheckoutPage/CheckoutPage.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .checkout {
   padding: 50px 0;
 
@@ -20,6 +22,7 @@
       font-size: 30px;
       font-weight: 600;
       padding-bottom: 20px;
+      color: $dark-brown;
     }
   }
 
