--- a/client/src/pages/CheckoutPage/Delivery/Delivery.scss
+++ b/client/src/pages/CheckoutPage/Delivery/Delivery.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 .delivery {
   display: flex;
   flex-direction: column;
@@ -14,7 +16,7 @@
     span{
       min-width: 19%;
       font-weight: bold;
-      color: #006A4E;
+      color: $light-brown;
       font-size: 18px;
     }
 
