--- a/client/src/pages/RestaurantPage/Cart/Cart.scss
+++ b/client/src/pages/RestaurantPage/Cart/Cart.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 .cart{
   display: flex;
   flex-direction: column;
@@ -20,7 +22,7 @@
     font-weight: bold;
 
     span{
-      color: #006A4E;
+      color: $dark-brown;
     }
   }
 
@@ -74,7 +76,7 @@
       align-items: center;
       height: 25px;
       width: 25px;
-      color: #006A4E;
+      color: $light-green;
       background-color: rgba(175, 216, 200, 0.7);
       font-weight: bold;
       font-size: 20px;
@@ -110,12 +112,12 @@
     font-size: 16px;
     font-weight: bold;
     color: white;
-    background-color: #31906E;
+    background-color: $light-green;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 
     &:hover{
-      background-color: darken(#31906E, 10%);
+      background-color: darken( $light-green, 10%);
     }
   }
 }
