--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -3,4 +3,6 @@ $light-green: #6D9773;
 $dark-green: #0C3B2E;
 $light-brown: #BB8A52;
 $dark-brown: #473C33;
+$light-gray: #E4E4E4FF;
 $gray: #808B96;
+$beige: #FFFAE0;
