--- a/client/src/pages/RestaurantPage/Categories/Categories.scss
+++ b/client/src/pages/RestaurantPage/Categories/Categories.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 .category{
   width: 100%;
   position: sticky;
@@ -10,7 +12,7 @@
 
   p{
     font-size: 20px;
-    color: #006A4E;
+    color: $dark-green;
     font-weight: bold;
   }
 
@@ -25,7 +27,7 @@
     cursor: pointer;
 
     &:not(:last-child){
-      border-bottom: 1px solid #E4E4E4FF;
+      border-bottom: 1px solid $light-gray;
     }
 
     &:hover {
@@ -44,7 +46,7 @@
       content: '';
       width: 100%;
       height: 7px;
-      background-color: #FFDB58;
+      background-color: $yellow;
       border-radius: 10px;
       position: absolute;
       bottom: 0;
