--- a/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
+++ b/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
@@ -1,7 +1,9 @@
+@import '../../../styles/variables.scss';
+
 .food_card {
   height: 190px;
   width: calc((100% - 20px) / 2);
-  border: 1px solid #E4E4E4FF;
+  border: 1px solid $light-gray;
   border-radius: 10px;
   padding: 15px;
 
@@ -21,7 +23,7 @@
     min-width: 100px;
     min-height: 100px;
     background-color: #6566AC;
-    border: 1px solid #E4E4E4FF;
+    border: 1px solid $light-gray;
     border-radius: 10px;
   }
 
@@ -37,7 +39,7 @@
   }
 
   &_description {
-    color: #808B96;
+    color: $gray;
     font-size: 16px;
   }
 
@@ -68,21 +70,21 @@
   }
 
   &_buy{
-    color: #006A4E;
+    color: $light-green;
     background-color: rgba(175, 216, 200, 0.7);
 
     &:hover:before{
       content: 'Add to cart';
       position: absolute;
       font-size: 12px;
-      color: #006A4E;
+      color: $dark-green;
       top: -10px;
       right: 0;
     }
   }
 
   &_buy_unavailable{
-    background-color: #e4e4e4;
-    color: gray;
+    background-color: $light-gray;
+    color: $gray;
   }
 }
