--- a/client/src/pages/RestaurantPage/RestaurantPage.scss
+++ b/client/src/pages/RestaurantPage/RestaurantPage.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .restaurant {
   padding: 50px 0;
 
@@ -26,7 +28,7 @@
 
   &_text{
     font-size: 16px;
-    color: #808B96;
+    color: $gray;
   }
 
   &_details {
