--- a/client/src/pages/RestaurantPage/Cart/Cart.scss
+++ b/client/src/pages/RestaurantPage/Cart/Cart.scss
@@ -119,5 +119,10 @@
     &:hover{
       background-color: darken( $light-green, 10%);
     }
+
+    &:disabled{
+      background-color: $gray;
+      opacity: 0.6;
+    }
   }
 }
