--- a/client/src/pages/CheckoutPage/Order/Order.scss
+++ b/client/src/pages/CheckoutPage/Order/Order.scss
@@ -28,6 +28,10 @@
       &:not(:first-child){
         text-align: center;
       }
+
+      &:last-child{
+        text-align: end;
+      }
     }
   }
 
@@ -47,6 +51,10 @@
 
       &:not(:first-child){
         text-align: center;
+      }
+
+      &:last-child{
+        text-align: end;
       }
     }
   }
