--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -1,7 +1,6 @@
 @import '../../styles/variables.scss';
 
 .restaurants {
-
   &_title {
     display: flex;
     gap: 10px;
@@ -19,55 +18,117 @@
   }
 
   &_group {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 15px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 15px;
+    grid-row-gap: 20px;
 
     a {
-      width: calc((100% - 45px) / 4);
       color: black
+    }
+
+    button{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      background-color: transparent;
+      font-size: 20px;
+      color: $dark-green;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+
+      &:hover{
+        font-weight: 600;
+      }
     }
   }
 }
 
-.categories {
-  padding-top: 50px;
+.achievements{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 60px;
+  width: 100%;
+  padding: 20px 0;
+  background-color: $light-brown;
+  border-radius: 20px;
 
-  &_title {
+  &_item{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
     gap: 10px;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    color: black;
-    font-size: 24px;
-    font-weight: 700;
-    padding-bottom: 30px;
+
+    &:not(:last-of-type){
+      border-right: 1px solid $beige;
+    }
   }
 
-  &_group {
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+  .item {
+    &_number, &_name{
+      color: white;
+    }
+
+    &_number{
+      font-size: 32px;
+    }
+
+    &_name{
+      font-size: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px){
+  .restaurants{
+    &_group{
+      grid-template-columns: 1fr 1fr 1fr;
+    }
   }
 
-  &_category {
-    display: inline-flex;
-    padding: 15px;
-    font-size: 16px;
-    font-weight: 700;
-    box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
-    transition: width 0.2s ease-in-out;
-    border-radius: 5px;
-    flex-shrink: 0;
-    cursor: pointer;
+  .achievements{
+    .item{
+      &_number{
+        font-size: 24px;
+      }
 
+      &_name{
+        font-size: 16px;
+      }
+    }
+  }
+}
 
-    &:hover {
-      transform: scale(1.05);
+@media screen and (max-width: 576px){
+  .restaurants{
+    &_title{
+      font-size: 18px;
+      padding-bottom: 20px;
+    }
+
+    &_group{
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+
+  .achievements{
+    &_item{
+      min-width: 50%;
+      border-right: 0 !important;
+      margin: 15px 0;
+    }
+
+    .item{
+      &_number{
+        font-size: 28px;
+      }
+
+      &_name{
+        font-size: 18px;
+      }
     }
   }
 }
