--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -6,6 +6,13 @@
   justify-content: center;
   gap: 30px;
 
+  &_tabs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+
   &_greeting{
     font-size: 20px;
     font-weight: 600;
@@ -67,6 +74,5 @@
       border-radius: 50%;
       padding: 3px 5px;
     }
-
   }
 }
