--- a/client/src/index.css
+++ b/client/src/index.css
@@ -96,8 +96,8 @@ h1, h2, h3, h4, h5, h6 {
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: 80px;
+  padding-right: 80px;
 }
 
 .no-scroll {
@@ -149,16 +149,21 @@ h1, h2, h3, h4, h5, h6 {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1280px) {
+  .content_wrap {
+    padding-top: 105px;
+  }
+}
+@media screen and (max-width: 768px) {
   .container {
     padding-left: 32px;
     padding-right: 32px;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 576px) {
   .container {
-    padding-left: 80px;
-    padding-right: 80px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
 
