--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -67,8 +67,8 @@ h1, h2, h3, h4, h5, h6 {
 .container {
     max-width: 1440px;
     margin: 0 auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 80px;
+    padding-right: 80px;
 }
 
 .no-scroll{
@@ -123,16 +123,22 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1280px){
+    .content_wrap{
+        padding-top: 105px;
+    }
+}
+
+@media screen and (max-width: 768px) {
     .container {
         padding-left: 32px;
         padding-right: 32px;
     }
 }
 
-@media screen and (min-width: 1280px){
+@media screen and (max-width: 576px){
     .container {
-        padding-left: 80px;
-        padding-right: 80px;
+        padding-left: 16px;
+        padding-right: 16px;
     }
 }
