implemented burger menu

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,7 @@ html, body {
 
 a:focus, a:active {
   outline: none;
+  color: black;
 }
 
 nav, footer, header, aside {
@@ -66,6 +67,7 @@ button::-moz-focus-inner {
 
 a, a:visited {
   text-decoration: none;
+  color: black;
 }
 
 a:hover {
