--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -37,7 +37,10 @@ html,body{
     box-sizing: border-box;
 }
 :focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
+a:focus,a:active{
+    outline: none;
+    color: black;
+}
 
 nav,footer,header,aside{display: block;}
 
@@ -46,7 +49,10 @@ input,button,textarea{font-family:inherit;}
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
 button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
+a, a:visited{
+    text-decoration: none;
+    color: black;
+}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
