--- a/client/src/components/LocationPopUp/LocationPopUp.scss
+++ b/client/src/components/LocationPopUp/LocationPopUp.scss
@@ -1,7 +1,8 @@
 @import '../../styles/variables.scss';
 
 .locationPopUp{
-  width: 1000px;
+  max-width: 1000px;
+  width: 90%;
   height: 520px;
   background-color: white;
   margin: 0 auto;
@@ -28,11 +29,11 @@
 
   &_main{
     display: flex;
-    gap: 40px;
+    gap: 4.16%;
   }
 
   &_location{
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     gap: 25px;
@@ -64,7 +65,6 @@
       display: flex;
       flex-direction: column;
       gap: 15px;
-      margin-top: 30px;
 
       label{
         font-weight: bold;
@@ -138,7 +138,7 @@
     flex-direction: column;
     gap: 7px;
     height: 100%;
-    width: 50%;
+    width: 60%;
 
     span{
       font-weight: 600;
@@ -162,6 +162,45 @@
       background: $gray;
       opacity: 0.6;
       cursor: default;
+    }
+  }
+}
+
+@media screen and (max-width: 768px){
+  .locationPopUp{
+    height: auto;
+
+    &_title{
+      font-size: 24px;
+    }
+
+    &_main{
+      flex-direction: column;
+      gap: 30px;
+      position: relative;
+      padding-bottom: 70px;
+    }
+
+    &_location{
+      width: 100%;
+
+      form{
+        flex-direction: row;
+        gap: 15px;
+        width: 100%;
+
+        div{
+          width: calc(100% - 15px);
+        }
+      }
+    }
+
+    &_map{
+      width: 100%;
+
+      #map{
+        height: 300px !important;
+      }
     }
   }
 }
