--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -1,20 +1,37 @@
-@import '../../../styles/variables.scss';
+@import '../../styles/variables';
 
 .cart{
   display: flex;
   flex-direction: column;
   min-height: 400px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
-  border-radius: 10px;
   padding: 20px;
   gap: 25px;
-  position: sticky;
-  top: 110px;
 
   &_wrapper{
-    grid-area: cart;
-    display: block;
-    position: relative;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 100%;
+    max-width: 400px;
+    height: 100%;
+    top: 0;
+    right: 0;
+    position: absolute;
+  }
+
+  &_header{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 20px;
+    font-size: 28px;
+    color: $dark-green;
+    font-weight: 600;
+
+    div{
+      margin: 3px 5px;
+    }
   }
 
   &_title{
@@ -42,49 +59,11 @@
     font-weight: 500;
   }
 
-  &_item{
+  &_bottom{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    gap: 5px;
-    padding-bottom: 5px;
-
-    &:not(:last-child){
-      border-bottom: 1px solid #e4e4e4;
-    }
-
-    &_top{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-size: 16px;
-    }
-
-    &_quantity{
-      font-weight: bold;
-    }
-
-    &_bottom{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    &_btn{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 25px;
-      width: 25px;
-      color: $light-green;
-      background-color: rgba(175, 216, 200, 0.7);
-      font-weight: bold;
-      font-size: 20px;
-      border-radius: 50%;
-      margin: 5px;
-      cursor: pointer;
-      user-select: none;
-    }
+    gap: 25px;
+    justify-self: flex-end;
   }
 
   &_sum{
