--- a/client/src/pages/RestaurantPage/Categories/Categories.scss
+++ b/client/src/pages/RestaurantPage/Categories/Categories.scss
@@ -22,9 +22,13 @@
   }
 
   &_list_item{
-    padding: 15px;
+    padding: 15px 12px;
     font-size: 18px;
     cursor: pointer;
+
+    span{
+      padding: 0 5px;
+    }
 
     &:not(:last-child){
       border-bottom: 1px solid $light-gray;
@@ -38,9 +42,7 @@
   .chosen_category span{
     font-weight: bold;
     position: relative;
-    padding: 0 5px;
     z-index: 5;
-
 
     &::after{
       content: '';
@@ -54,5 +56,53 @@
       z-index: -1;
     }
   }
+}
 
+@media screen and (max-width: 768px){
+  .category{
+    &_list_item{
+      text-align: center;
+
+      span{
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px){
+  .category{
+    max-width: calc(100vw - 32px);
+    overflow: hidden;
+
+    p{
+      margin-bottom: 10px;
+    }
+
+    &_list{
+      gap: 15px;
+      padding: 0 15px;
+      margin: 0;
+      overflow-x: auto;
+      scroll-behavior: smooth;
+      scrollbar-color: $light-brown;
+      flex-direction: row;
+      align-items: center;
+    }
+
+    &_list_item{
+      display: inline-flex;
+      border-bottom: none !important;
+      padding-bottom: 0;
+      font-size: 16px;
+      margin-bottom: 5px;
+
+      span{
+        display: block;
+        white-space: nowrap;
+        width: 100%;
+        padding-bottom: 8px;
+      }
+    }
+  }
 }
