--- a/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
+++ b/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
@@ -10,18 +10,21 @@
   &_container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
     gap: 15px;
   }
 
   &_top {
     display: flex;
     gap: 10px;
-
+    height: 100px;
   }
 
   &_image {
     min-width: 100px;
     min-height: 100px;
+    height: 100px;
     background-color: #6566AC;
     border: 1px solid $light-gray;
     border-radius: 10px;
@@ -41,6 +44,7 @@
   &_description {
     color: $gray;
     font-size: 16px;
+    text-overflow: ellipsis;
   }
 
   &_bottom {
@@ -86,5 +90,55 @@
   &_buy_unavailable{
     background-color: $light-gray;
     color: $gray;
+  }
+}
+
+@media screen and (max-width: 1280px){
+  .food_card{
+    flex: 1 1 270px;
+    min-width: 270px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .food_card{
+    width: 100%;
+    height: 150px;
+
+    &_container{
+      flex-direction: row;
+      gap: 35px;
+    }
+
+    &_bottom{
+      flex-direction: column;
+    }
+
+    &_price {
+      font-size: 20px;
+    }
+
+    &_buy{
+      &:hover:before{
+        font-size: 10px;
+        bottom: 40px;
+        top: unset;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px){
+  .food_card{
+    &_image{
+      min-width: 80px;
+      min-height: 80px;
+      height: 80px;
+    }
+
+    &_description {
+      font-size: 14px;
+    }
   }
 }
