--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -97,7 +97,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    position: fixed;
     z-index: 1400;
     display: flex;
     align-items: center;
