--- a/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
+++ b/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
@@ -2,7 +2,6 @@
 
 .food_card {
   height: 190px;
-  width: calc((100% - 20px) / 2);
   border: 1px solid $light-gray;
   border-radius: 10px;
   padding: 15px;
@@ -93,16 +92,8 @@
   }
 }
 
-@media screen and (max-width: 1280px){
-  .food_card{
-    flex: 1 1 270px;
-    min-width: 270px;
-  }
-}
-
 @media screen and (max-width: 768px){
   .food_card{
-    width: 100%;
     height: 150px;
 
     &_container{
@@ -131,6 +122,11 @@
 
 @media screen and (max-width: 576px){
   .food_card{
+
+    &_container{
+      gap: 20px;
+    }
+
     &_image{
       min-width: 80px;
       min-height: 80px;
