--- a/client/src/pages/RestaurantPage/MenuBody/MenuBody.scss
+++ b/client/src/pages/RestaurantPage/MenuBody/MenuBody.scss
@@ -1,6 +1,6 @@
 .menu_body{
   grid-area: menu;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  grid-gap: 20px;
 }
