--- a/client/src/components/AuthModal/AuthModal.scss
+++ b/client/src/components/AuthModal/AuthModal.scss
@@ -1,7 +1,8 @@
 @import '../../styles/variables.scss';
 
-.login {
-  width: 400px;
+.auth-modal {
+  max-width: 400px;
+  width: 90%;
   height: 500px;
   background-color: white;
   margin: 0 auto;
@@ -12,6 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 15px;
 
     &-title {
       font-size: 25px;
@@ -21,37 +23,12 @@
   }
 
   &-body {
-    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 30px;
     width: 100%;
-
-    &-label{
-      font-size: 16px;
-      color: $dark-brown;
-      font-weight: bold;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      padding-bottom: 15px;
-    }
-
-    &-input{
-      width: 100%;
-      height: 40px;
-      border-radius: 10px;
-      border: 1px solid $gray;
-      padding: 5px;
-      font-size: 14px;
-
-      &::placeholder{
-        color: $gray;
-      }
-    }
-
-    &-error{
-      font-size: 12px;
-      color: red;
-      margin-top: -5px;
-    }
+    height: calc(100% - 40px);
 
     button{
       width: 100%;
@@ -70,9 +47,37 @@
     }
   }
 
-  &-submit-error{
-    color: red;
-    font-size: 14px;
-    margin-bottom: -10px;
+  &-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
+    p{
+      font-size: 20px;
+      color: $gray;
+    }
+
+    span{
+      font-size: 18px;
+      font-weight: 600;
+      color: $dark-green;
+      cursor: pointer;
+
+      &:hover{
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px){
+  .authModal{
+    &-header {
+
+      &-title {
+        font-size: 23px;
+      }
+    }
   }
 }
