--- a/client/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/client/src/pages/CheckoutPage/CheckoutPage.scss
@@ -10,13 +10,15 @@
   }
 
   &_info {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
   }
 
   &_map {
   }
 
   &_personal_info {
-    padding-top: 30px;
 
     &_title{
       font-size: 30px;
@@ -30,5 +32,19 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+  }
+}
+
+@media screen and (max-width: 1024px){
+  .checkout{
+    &_container {
+      display: flex;
+      flex-direction: column-reverse;
+      gap: 30px;
+    }
+
+    &_info {
+      flex-direction: column-reverse;
+    }
   }
 }
