--- a/client/src/pages/CheckoutPage/Delivery/Delivery.scss
+++ b/client/src/pages/CheckoutPage/Delivery/Delivery.scss
@@ -14,7 +14,7 @@
     gap: 20px;
 
     span{
-      min-width: 19%;
+      min-width: 70px;
       font-weight: bold;
       color: $light-brown;
       font-size: 18px;
