--- a/client/src/pages/CheckoutPage/Order/Order.scss
+++ b/client/src/pages/CheckoutPage/Order/Order.scss
@@ -12,50 +12,30 @@
   }
 
   &_title {
-    font-size: 30px;
-    font-weight: bold;
-  }
-
-  &_headers{
-    display: grid;
-    grid-template-columns: 3fr 1fr 1fr;
-    grid-row-gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
 
     p{
-      font-size: 20px;
-      font-weight: 600;
+      font-size: 30px;
+      font-weight: bold;
 
-      &:not(:first-child){
-        text-align: center;
-      }
-
-      &:last-child{
-        text-align: end;
+      span{
+        color: $light-brown;
       }
     }
   }
 
-  &_items {
+  &_dropdown_icon{
     display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
+    align-items: center;
+    gap: 5px;
 
-  &_item {
-    display: grid;
-    grid-template-columns: 3fr 1fr 1fr;
-    grid-row-gap: 10px;
-
-    p{
-      font-size: 16px;
-
-      &:not(:first-child){
-        text-align: center;
-      }
-
-      &:last-child{
-        text-align: end;
-      }
+    span{
+      color: $gray;
+      font-size: 14px;
+      white-space: nowrap;
     }
   }
 
@@ -82,6 +62,17 @@
       padding-top: 20px;
       font-size: 20px;
       font-weight: 600;
+    }
+  }
+}
+
+@media screen and (max-width: 576px){
+  .order{
+    &_title{
+
+      p{
+        font-size: 20px;
+      }
     }
   }
 }
