--- a/client/src/components/Burgermenu/RestaurantType/RestaurantType.scss
+++ b/client/src/components/Burgermenu/RestaurantType/RestaurantType.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/variables.scss';
 
-.restaurant_type{
+.restaurant-type{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -8,13 +8,13 @@
   border-bottom: 1px solid $light-gray;
   cursor: pointer;
 
-  &_name{
+  &-name{
     font-size: 24px;
     font-weight: 500;
     color: $dark-green;
   }
 
-  &_restaurant_names{
+  &-restaurant-names{
     display: flex;
     flex-direction: column;
 
@@ -36,14 +36,14 @@
 }
 
 @media screen and (max-width: 576px){
-  .restaurant_type{
+  .restaurant-type{
     padding: 15px 10px;
 
-    &_name{
+    &-name{
       font-size: 20px;
     }
 
-    &_restaurant_names{
+    &-restaurant-names{
       a{
         font-size: 18px;
         padding: 15px 20px;
