--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -7,7 +7,7 @@
   padding: 20px;
   gap: 25px;
 
-  &_wrapper{
+  &-wrapper{
     padding-top: 20px;
     display: flex;
     flex-direction: column;
@@ -21,7 +21,7 @@
     padding-bottom: 30px;
   }
 
-  &_header{
+  &-header{
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -35,7 +35,7 @@
     }
   }
 
-  &_title{
+  &-title{
     font-size: 24px;
     font-weight: bold;
 
@@ -44,7 +44,7 @@
     }
   }
 
-  &_body{
+  &-body{
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -53,7 +53,7 @@
     overflow: auto;
   }
 
-  &_empty{
+  &-empty{
     font-size: 20px;
     margin-top: 70px;
     text-align: center;
@@ -61,32 +61,32 @@
     font-weight: 500;
   }
 
-  &_bottom{
+  &-bottom{
     display: flex;
     flex-direction: column;
     gap: 25px;
     justify-self: flex-end;
   }
 
-  &_sum{
+  &-sum{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     padding-top: 10px;
 
-    &_text{
+    &-text{
       font-size: 18px;
       font-weight: 600;
     }
 
-    &_total{
+    &-total{
       font-size: 20px;
       font-weight: 700;
     }
   }
 
-  &_button{
+  &-button{
     width: 100%;
     height: 40px;
     border-radius: 15px;
