--- a/client/src/pages/CheckoutPage/CheckoutOrder/CheckoutOrder.scss
+++ b/client/src/pages/CheckoutPage/CheckoutOrder/CheckoutOrder.scss
@@ -5,13 +5,13 @@
   box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
   border-radius: 10px;
 
-  &_container {
+  &-container {
     display: flex;
     flex-direction: column;
     gap: 40px;
   }
 
-  &_title {
+  &-title {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -27,7 +27,7 @@
     }
   }
 
-  &_dropdown_icon{
+  &-dropdown-icon{
     display: flex;
     align-items: center;
     gap: 5px;
@@ -39,12 +39,12 @@
     }
   }
 
-  &_payment{
+  &-payment{
     display: flex;
     flex-direction: column;
     gap: 10px;
 
-    &_fee{
+    &-fee{
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -55,7 +55,7 @@
       }
     }
 
-    &_total_container{
+    &-total-container{
       display: flex;
       flex-direction: column;
       gap: 15px;
@@ -64,7 +64,7 @@
       font-weight: 600;
     }
 
-    &_total{
+    &-total{
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -74,7 +74,7 @@
 
 @media screen and (max-width: 576px){
   .checkout-order{
-    &_title{
+    &-title{
 
       p{
         font-size: 20px;
