--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -10,7 +10,7 @@
   background-color: $light-brown;
   border-radius: 20px;
 
-  &_item{
+  &-item{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,15 +23,15 @@
   }
 
   .item {
-    &_number, &_name{
+    &-number, &-name{
       color: white;
     }
 
-    &_number{
+    &-number{
       font-size: 32px;
     }
 
-    &_name{
+    &-name{
       font-size: 20px;
     }
   }
@@ -40,11 +40,11 @@
 @media screen and (max-width: 768px){
   .achievements{
     .item{
-      &_number{
+      &-number{
         font-size: 24px;
       }
 
-      &_name{
+      &-name{
         font-size: 16px;
       }
     }
@@ -53,18 +53,18 @@
 
 @media screen and (max-width: 576px){
   .achievements{
-    &_item{
+    &-item{
       min-width: 50%;
       border-right: 0 !important;
       margin: 15px 0;
     }
 
     .item{
-      &_number{
+      &-number{
         font-size: 28px;
       }
 
-      &_name{
+      &-name{
         font-size: 18px;
       }
     }
