--- a/client/src/pages/NotFound/NotFound.scss
+++ b/client/src/pages/NotFound/NotFound.scss
@@ -4,7 +4,7 @@
   display: flex;
   height: calc(100% - 160px);
 
-  &_container {
+  &-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,12 +12,12 @@
     gap: 30px;
   }
 
-  &_title {
+  &-title {
     font-size: 50px;
     margin-top: -100px;
   }
 
-  &_button {
+  &-button {
     padding: 15px;
     color: $light-green;
     border: 1px solid $light-green;
@@ -30,6 +30,15 @@
     &:hover{
       box-shadow: rgba(50, 50, 93, 0.25) 0 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
       filter: brightness(70%);
+    }
+  }
+}
+
+@media screen and (max-width: 768px){
+  .notfound{
+    &-title {
+      font-size: 40px;
+      text-align: center;
     }
   }
 }
