--- a/client/src/pages/RestaurantPage/Categories/Categories.scss
+++ b/client/src/pages/RestaurantPage/Categories/Categories.scss
@@ -5,7 +5,7 @@
   position: sticky;
   top: 110px;
 
-  &_wrapper{
+  &-wrapper{
     grid-area: categories;
     position: relative;
   }
@@ -16,12 +16,12 @@
     font-weight: bold;
   }
 
-  &_list{
+  &-list{
     display: flex;
     flex-direction: column;
   }
 
-  &_list_item{
+  &-list-item{
     padding: 15px 12px;
     font-size: 18px;
     cursor: pointer;
@@ -39,7 +39,7 @@
     }
   }
 
-  .chosen_category span{
+  .chosen-category span{
     font-weight: bold;
     position: relative;
     z-index: 5;
@@ -60,7 +60,7 @@
 
 @media screen and (max-width: 768px){
   .category{
-    &_list_item{
+    &-list-item{
       text-align: center;
 
       span{
@@ -79,7 +79,7 @@
       margin-bottom: 10px;
     }
 
-    &_list{
+    &-list{
       gap: 15px;
       padding: 0 15px;
       margin: 0;
@@ -90,7 +90,7 @@
       align-items: center;
     }
 
-    &_list_item{
+    &-list-item{
       display: inline-flex;
       border-bottom: none !important;
       padding-bottom: 0;
